--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-#div1 {
+/* #div1 {
   background-image: url("https://picsum.photos/id/237/200/300");
   height: 300px;
   width: 200px;
@@ -60,4 +60,52 @@ p {
 
 button {
   margin: 20px;
+}
+ */
+
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.draggable {
+    width: 100px;
+    height: 200px;
+    border: 1px solid #ccc;
+    background-size: cover;
+    cursor: move;
+}
+
+#div1 {
+    background-image: url('https://via.placeholder.com/100x200?text=Image+1');
+}
+
+#div2 {
+    background-image: url('https://via.placeholder.com/100x200?text=Image+2');
+}
+
+#div3 {
+    background-image: url('https://via.placeholder.com/100x200?text=Image+3');
+}
+
+#div4 {
+    background-image: url('https://via.placeholder.com/100x200?text=Image+4');
+}
+
+#div5 {
+    background-image: url('https://via.placeholder.com/100x200?text=Image+5');
+}
+
+#div6 {
+    background-image: url('https://via.placeholder.com/100x200?text=Image+6');
 }
